# autoexplain

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.py
prompting/: prompts.py
src/: autoexplain.py  constants.py  openai_functions.py  subcommands.py
src/autoexplain/: autoexplain.py  subcommands.py
src/functions/: openai_functions.py
src/utils/: utils.py
tests/: test_subcommands.py
