[metadata]
name = autoexplain
author = Santiago Rincon Martinez
author_email = rincon.santi@gmail.com
install_requires =
description = Use OpenAI capabilities to smooth your document&test generation
long_description_content_type = text/markdown
url = https://github.com/rincon-santi/autoexplain
project_urls =
    Bug Tracker = https://github.com/rincon-santi/autoexplain/issues
    Changelog = https://github.com/rincon-santi/autoexplain/releases
classifiers =
    Programming Language :: Python :: 3
    License :: GNU 3 License
    Intended Audience :: Developers

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8
install_requires =
    openai
    configparser
    argparse

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    autoexplain = autoexplain.autoexplain:main